# gnuitar

./: AUTHORS  CMakeLists.txt  ChangeLog  FAQ  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  configure  configure.in  debian.control  gnuitar-9999.ebuild  gnuitar.dsp  gnuitar.dsw  gnuitar.kdevprj  gnuitar.lsm  gnuitar.mak  gnuitar.sln  gnuitar.spec  gnuitar.vcproj
distort2/: distort2lookup_44100_10_10  distort2lookup_44100_10_110  distort2lookup_44100_10_120  distort2lookup_44100_10_130  distort2lookup_44100_10_140  distort2lookup_44100_10_150  distort2lookup_44100_10_160  distort2lookup_44100_10_170  distort2lookup_44100_10_180  distort2lookup_44100_10_190  distort2lookup_44100_10_20  distort2lookup_44100_10_200  distort2lookup_44100_10_210  distort2lookup_44100_10_220  distort2lookup_44100_10_230  distort2lookup_44100_10_240  distort2lookup_44100_10_250  distort2lookup_44100_10_260  distort2lookup_44100_10_270  distort2lookup_44100_10_280  distort2lookup_44100_10_290  distort2lookup_44100_10_30  distort2lookup_44100_10_300  distort2lookup_44100_10_310  distort2lookup_44100_10_320  distort2lookup_44100_10_330  distort2lookup_44100_10_340  distort2lookup_44100_10_350  distort2lookup_44100_10_360  distort2lookup_44100_10_370  distort2lookup_44100_10_380  distort2lookup_44100_10_390  distort2lookup_44100_10_40  distort2lookup_44100_10_400  distort2lookup_44100_10_410  distort2lookup_44100_10_420  distort2lookup_44100_10_430  distort2lookup_44100_10_440  distort2lookup_44100_10_450  distort2lookup_44100_10_460  (+522 more)
docs/: devdocs.txt  faq.html  index.html  install.html  readme.html
effects/: HeyDay  Makefile.am  Makefile.in  Phase_destruction  Vibrato
scripts/: beautify.sh  build-nonlinearity.py  convert-impulse-wav-to-program.py  debian_package  filter-response.py  fir-spectra.py  gendistort.sh  pitch-shifter-test.py  strip_lookup_table  striptables.sh
src/: Makefile.am  Makefile.in  about_text.h  amp.c  amp.h  audio-alsa.c  audio-alsa.h  audio-driver.c  audio-driver.h  audio-dsound.c  audio-dsound.h  audio-jack.c  audio-jack.h  audio-midi.c  audio-midi.h  audio-oss.c  audio-oss.h  audio-windows.c  audio-windows.h  audio-winmm.c  audio-winmm.h  authors_text.h  autowah.c  autowah.h  backbuf.c  backbuf.h  biquad.c  biquad.h  chebyshev.c  chebyshev.h  chorus.c  chorus.h  delay.c  delay.h  distort.c  distort.h  distort2.c  distort2.h  echo.c  echo.h  (+46 more)
